--- a/red-bicicletas/package.json
+++ b/red-bicicletas/package.json
@@ -8,7 +8,7 @@
 
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
+    "cookie-parser": "~1.4.4n",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
